Center align fuse popup buttons and resolve #46

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -92,3 +92,9 @@ input.mce_inline_error
 
 #mce-error-response
   color: #e53722
+
+// Alertify Overrides
+   =============================================================================
+
+.ajs-buttons
+  text-align: center !important
